--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -11,8 +11,11 @@
       "savePath": "/css"
     }
   ],
-  "liveSassCompile.settings.excludeList": ["**/node_modules/**", ".vscode/**"],
+  "liveSassCompile.settings.excludeList": [
+    "/**/node_modules/**",
+    "/.vscode/**"
+  ],
   "liveSassCompile.settings.generateMap": true,
-  "liveServer.settings.port": 1235,
-  "liveSassCompile.settings.autoprefix": null
+  "liveServer.settings.port": 1235
+  "liveSassCompile.settings.autoprefix": ["> 1%", "last 2 versions"]
 }
